--- a/index.html
+++ b/index.html
@@ -459,6 +459,68 @@
             </div>
         </div>
 
+        <!-- Interactive Number Simulator -->
+        <div class="mt-16 glass-panel p-8 md:p-12 rounded-3xl border border-emerald-500/30">
+            <div class="text-center mb-8">
+                <h2 class="text-2xl md:text-3xl font-bold text-white mb-4">🎯 Monte Seu Jogo</h2>
+                <p class="text-emerald-200/70">Clique em 6 números para montar sua aposta. Veja se são quentes ou frios!
+                </p>
+            </div>
+
+            <!-- Selected Numbers Display -->
+            <div class="mb-8 p-6 bg-black/30 rounded-2xl border border-white/10">
+                <div class="flex flex-wrap items-center justify-center gap-3 mb-4 min-h-[60px]"
+                    id="selectedNumbersDisplay">
+                    <span class="text-emerald-200/40 text-sm" id="placeholderText">Selecione 6 números abaixo...</span>
+                </div>
+                <div class="flex flex-col sm:flex-row gap-3 justify-center items-center">
+                    <button onclick="copyNumbers()" id="copyBtn" disabled
+                        class="inline-flex items-center gap-2 bg-emerald-600 hover:bg-emerald-500 disabled:bg-gray-600 disabled:cursor-not-allowed text-white px-5 py-2.5 rounded-full font-semibold transition-all duration-300">
+                        <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24"
+                            stroke="currentColor">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                d="M8 16H6a2 2 0 01-2-2V6a2 2 0 012-2h8a2 2 0 012 2v2m-6 12h8a2 2 0 002-2v-8a2 2 0 00-2-2h-8a2 2 0 00-2 2v8a2 2 0 002 2z" />
+                        </svg>
+                        <span id="copyBtnText">Copiar Números</span>
+                    </button>
+                    <button onclick="clearSelection()"
+                        class="inline-flex items-center gap-2 bg-red-600/50 hover:bg-red-500 text-white px-5 py-2.5 rounded-full font-semibold transition-all duration-300">
+                        <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24"
+                            stroke="currentColor">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                d="M19 7l-.867 12.142A2 2 0 0116.138 21H7.862a2 2 0 01-1.995-1.858L5 7m5 4v6m4-6v6m1-10V4a1 1 0 00-1-1h-4a1 1 0 00-1 1v3M4 7h16" />
+                        </svg>
+                        Limpar
+                    </button>
+                </div>
+            </div>
+
+            <!-- Number Grid -->
+            <div class="grid grid-cols-6 sm:grid-cols-10 gap-2 md:gap-3" id="simulatorGrid">
+                <!-- JavaScript will populate -->
+            </div>
+
+            <!-- Legend -->
+            <div class="mt-6 flex flex-wrap justify-center gap-4 text-xs text-emerald-200/60">
+                <div class="flex items-center gap-2">
+                    <span class="w-4 h-4 rounded bg-gradient-to-br from-red-500 to-red-700"></span>
+                    <span>Quente (Top 10)</span>
+                </div>
+                <div class="flex items-center gap-2">
+                    <span class="w-4 h-4 rounded bg-gradient-to-br from-amber-500 to-amber-600"></span>
+                    <span>Morno</span>
+                </div>
+                <div class="flex items-center gap-2">
+                    <span class="w-4 h-4 rounded bg-emerald-800/50 border border-emerald-600/30"></span>
+                    <span>Normal</span>
+                </div>
+                <div class="flex items-center gap-2">
+                    <span class="w-4 h-4 rounded bg-blue-900/50 border border-blue-500/30"></span>
+                    <span>Frio</span>
+                </div>
+            </div>
+        </div>
+
         <!-- Share Section -->
         <div class="mt-16 text-center">
             <a href="https://wa.me/?text=Achei%20uma%20an%C3%A1lise%20da%20Mega%20da%20Virada%20baseada%20em%20dados%20dos%20%C3%BAltimos%2030%20anos.%0A%0ATem%20estat%C3%ADsticas%2C%20mapas%20de%20calor%20dos%20n%C3%BAmeros%20que%20saem%20mais%20e%20algumas%20visualiza%C3%A7%C3%B5es%20interessantes%20que%20ajudam%20na%20escolha%20dos%20n%C3%BAmeros%0A%0Ahttps%3A%2F%2Fgbsxl.github.io%2FMegaDaViradaAnalysis%2F"
@@ -652,6 +714,162 @@
             div.title = `Dezena ${item.number}: ${item.count} vezes`;
             gridContainer.appendChild(div);
         });
+
+        // 5. INTERACTIVE SIMULATOR
+        const selectedNumbers = [];
+        const simulatorGrid = document.getElementById('simulatorGrid');
+        const selectedDisplay = document.getElementById('selectedNumbersDisplay');
+        const placeholderText = document.getElementById('placeholderText');
+        const copyBtn = document.getElementById('copyBtn');
+        const copyBtnText = document.getElementById('copyBtnText');
+
+        // Hot numbers classification based on fixedHotNumbers
+        const hotNumbers = [10, 53, 5, 37, 33, 23, 4, 42, 54, 51]; // Top 10
+        const warmNumbers = [2, 28, 35, 17, 44, 38, 27, 56, 41, 6]; // Secondary tier
+        const coldNumbers = [21, 50, 13, 58, 7, 26, 22, 55]; // Cold/late numbers
+
+        function getNumberClass(num) {
+            if (hotNumbers.includes(num)) return 'hot';
+            if (warmNumbers.includes(num)) return 'warm';
+            if (coldNumbers.includes(num)) return 'cold';
+            return 'normal';
+        }
+
+        function getNumberStyles(num) {
+            const type = getNumberClass(num);
+            switch (type) {
+                case 'hot':
+                    return {
+                        bg: 'linear-gradient(135deg, #ef4444, #b91c1c)',
+                        border: '2px solid #fca5a5',
+                        shadow: '0 0 15px rgba(239,68,68,0.5)',
+                        label: 'QUENTE'
+                    };
+                case 'warm':
+                    return {
+                        bg: 'linear-gradient(135deg, #f59e0b, #d97706)',
+                        border: '2px solid #fcd34d',
+                        shadow: '0 0 10px rgba(245,158,11,0.4)',
+                        label: 'MORNO'
+                    };
+                case 'cold':
+                    return {
+                        bg: 'rgba(59, 130, 246, 0.4)',
+                        border: '2px solid #93c5fd',
+                        shadow: '0 0 10px rgba(59,130,246,0.3)',
+                        label: 'FRIO'
+                    };
+                default:
+                    return {
+                        bg: 'rgba(16, 185, 129, 0.2)',
+                        border: '2px solid rgba(16, 185, 129, 0.4)',
+                        shadow: 'none',
+                        label: ''
+                    };
+            }
+        }
+
+        function toggleNumber(num) {
+            const index = selectedNumbers.indexOf(num);
+            if (index > -1) {
+                selectedNumbers.splice(index, 1);
+            } else {
+                if (selectedNumbers.length >= 6) {
+                    alert('Você já selecionou 6 números! Remova um para adicionar outro.');
+                    return;
+                }
+                selectedNumbers.push(num);
+            }
+            updateDisplay();
+            updateGrid();
+        }
+
+        function updateDisplay() {
+            selectedDisplay.innerHTML = '';
+
+            if (selectedNumbers.length === 0) {
+                selectedDisplay.innerHTML = '<span class="text-emerald-200/40 text-sm">Selecione 6 números abaixo...</span>';
+                copyBtn.disabled = true;
+                return;
+            }
+
+            const sorted = [...selectedNumbers].sort((a, b) => a - b);
+            sorted.forEach(num => {
+                const styles = getNumberStyles(num);
+                const span = document.createElement('span');
+                span.className = 'w-12 h-12 rounded-full flex items-center justify-center font-bold text-white text-lg transition-all';
+                span.style.background = styles.bg;
+                span.style.border = styles.border;
+                span.style.boxShadow = styles.shadow;
+                span.textContent = num.toString().padStart(2, '0');
+                selectedDisplay.appendChild(span);
+            });
+
+            // Add count indicator
+            const countSpan = document.createElement('span');
+            countSpan.className = 'ml-4 text-emerald-200/60 text-sm';
+            countSpan.textContent = `(${selectedNumbers.length}/6)`;
+            selectedDisplay.appendChild(countSpan);
+
+            copyBtn.disabled = selectedNumbers.length !== 6;
+        }
+
+        function updateGrid() {
+            const buttons = simulatorGrid.querySelectorAll('button');
+            buttons.forEach(btn => {
+                const num = parseInt(btn.dataset.num);
+                if (selectedNumbers.includes(num)) {
+                    btn.classList.add('ring-4', 'ring-white', 'scale-110');
+                } else {
+                    btn.classList.remove('ring-4', 'ring-white', 'scale-110');
+                }
+            });
+        }
+
+        function copyNumbers() {
+            if (selectedNumbers.length !== 6) return;
+            const sorted = [...selectedNumbers].sort((a, b) => a - b);
+            const text = sorted.map(n => n.toString().padStart(2, '0')).join(' - ');
+
+            navigator.clipboard.writeText(text).then(() => {
+                copyBtnText.textContent = 'Copiado!';
+                setTimeout(() => {
+                    copyBtnText.textContent = 'Copiar Números';
+                }, 2000);
+            }).catch(() => {
+                // Fallback for older browsers
+                const textarea = document.createElement('textarea');
+                textarea.value = text;
+                document.body.appendChild(textarea);
+                textarea.select();
+                document.execCommand('copy');
+                document.body.removeChild(textarea);
+                copyBtnText.textContent = 'Copiado!';
+                setTimeout(() => {
+                    copyBtnText.textContent = 'Copiar Números';
+                }, 2000);
+            });
+        }
+
+        function clearSelection() {
+            selectedNumbers.length = 0;
+            updateDisplay();
+            updateGrid();
+        }
+
+        // Build simulator grid
+        for (let i = 1; i <= 60; i++) {
+            const styles = getNumberStyles(i);
+            const btn = document.createElement('button');
+            btn.dataset.num = i;
+            btn.className = 'h-10 md:h-12 rounded-lg font-bold text-white text-sm md:text-base transition-all duration-200 hover:scale-105 cursor-pointer';
+            btn.style.background = styles.bg;
+            btn.style.border = styles.border;
+            btn.textContent = i.toString().padStart(2, '0');
+            btn.title = styles.label ? `${i} - ${styles.label}` : i.toString();
+            btn.onclick = () => toggleNumber(i);
+            simulatorGrid.appendChild(btn);
+        }
     </script>
 </body>
 
