--- a/index.html
+++ b/index.html
@@ -553,6 +553,91 @@
         </div>
 
         <!-- Interactive Sections Removed -->
+        <!-- Waitlist Section -->
+        <div
+            class="mt-16 glass-panel p-8 md:p-12 rounded-3xl border border-amber-500/30 text-center relative overflow-hidden">
+            <div class="absolute inset-0 bg-gradient-to-br from-amber-500/10 to-transparent -z-10"></div>
+
+            <h2 class="text-2xl md:text-3xl font-bold text-white mb-4">🚀 Lista de Espera 2026</h2>
+            <p class="text-emerald-200/70 mb-8 max-w-lg mx-auto">Receba as análises da próxima virada em primeira mão
+                diretamente no seu e-mail. Privacidade total.</p>
+
+            <form id="waitlistForm" class="max-w-md mx-auto flex flex-col sm:flex-row gap-3"
+                onsubmit="submitWaitlist(event)">
+                <input type="email" id="emailInput" required placeholder="Seu melhor e-mail..."
+                    class="flex-1 bg-black/50 border border-white/10 rounded-xl px-5 py-3 text-white placeholder-gray-500 focus:outline-none focus:border-amber-500 transition-all">
+
+                <button type="submit" id="submitBtn"
+                    class="bg-gradient-to-r from-amber-500 to-amber-600 hover:from-amber-400 hover:to-amber-500 text-emerald-900 font-bold px-6 py-3 rounded-xl transition-all shadow-[0_0_20px_rgba(245,158,11,0.3)] hover:shadow-[0_0_30px_rgba(245,158,11,0.5)] transform hover:-translate-y-1 disabled:opacity-50 disabled:cursor-not-allowed">
+                    <span id="btnText">Garanta seu Lugar</span>
+                    <svg id="btnSpinner" class="animate-spin h-5 w-5 hidden inline-ml-2"
+                        xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24">
+                        <circle class="opacity-25" cx="12" cy="12" r="10" stroke="currentColor" stroke-width="4">
+                        </circle>
+                        <path class="opacity-75" fill="currentColor"
+                            d="M4 12a8 8 0 018-8V0C5.373 0 0 5.373 0 12h4zm2 5.291A7.962 7.962 0 014 12H0c0 3.042 1.135 5.824 3 7.938l3-2.647z">
+                        </path>
+                    </svg>
+                </button>
+            </form>
+            <p id="waitlistMessage" class="mt-4 text-sm font-bold hidden"></p>
+        </div>
+
+        <script>
+            // WAITLIST LOGIC
+            const WEB_APP_URL = "https://script.google.com/macros/s/AKfycbyFJvHe3jtgUOWVHZJX_bHC6biyKqd7E4_4mPzM9PNb8oENe-TlG8QGnXd-Lt0byY2i/exec";
+
+            function submitWaitlist(e) {
+                e.preventDefault();
+
+                const form = document.getElementById('waitlistForm');
+                const btn = document.getElementById('submitBtn');
+                const btnText = document.getElementById('btnText');
+                const btnSpinner = document.getElementById('btnSpinner');
+                const msg = document.getElementById('waitlistMessage');
+                const email = document.getElementById('emailInput').value;
+
+                if (!WEB_APP_URL || WEB_APP_URL.includes("URL_DO_SEU")) {
+                    alert('Erro de configuracao: Voce precisa adicionar a URL do seu Google Script no codigo do site.');
+                    return;
+                }
+
+                // Loading state
+                btn.disabled = true;
+                btnText.textContent = 'Enviando...';
+                btnSpinner.classList.remove('hidden');
+                msg.classList.add('hidden');
+
+                // Send to Google Sheets
+                fetch(WEB_APP_URL, {
+                    method: 'POST',
+                    mode: 'no-cors', // Important for Google Apps Script
+                    headers: {
+                        'Content-Type': 'application/x-www-form-urlencoded',
+                    },
+                    body: `email=${encodeURIComponent(email)}`
+                })
+                    .then(() => {
+                        // Success (no-cors doesnt return JSON, so we assume success if no error)
+                        msg.textContent = '✅ Sucesso! Voce esta na lista.';
+                        msg.className = 'mt-4 text-sm font-bold text-amber-400 animate-pulse';
+                        msg.classList.remove('hidden');
+                        form.reset();
+                    })
+                    .catch(err => {
+                        msg.textContent = '❌ Erro ao enviar. Tente novamente.';
+                        msg.className = 'mt-4 text-sm font-bold text-red-400';
+                        msg.classList.remove('hidden');
+                        console.error('Waitlist Error:', err);
+                    })
+                    .finally(() => {
+                        btn.disabled = false;
+                        btnText.textContent = 'Garanta seu Lugar';
+                        btnSpinner.classList.add('hidden');
+                    });
+            }
+        </script>
+
         <!-- Share Section -->
         <div class="mt-16 text-center">
             <a href="https://wa.me/?text=Achei%20uma%20an%C3%A1lise%20da%20Mega%20da%20Virada%20baseada%20em%20dados%20dos%20%C3%BAltimos%2030%20anos.%0A%0ATem%20estat%C3%ADsticas%2C%20mapas%20de%20calor%2C%20d%C3%A1%20pra%20montar%20seu%20jogo%20e%20depois%20do%20sorteio%20d%C3%A1%20pra%20conferir%20as%20apostas%20direto%20no%20site!%0A%0Ahttps%3A%2F%2Fgbsxl.github.io%2FMegaDaViradaAnalysis%2F"
